# swagger_server/models/material_access_data.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class MaterialAccessData(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, id_material: int=None, quantity: float=None):  # noqa: E501
+        """MaterialAccessData - a model defined in Swagger
+
+        :param id_material: The id_material of this MaterialAccessData.  # noqa: E501
+        :type id_material: int
+        :param quantity: The quantity of this MaterialAccessData.  # noqa: E501
+        :type quantity: float
+        """
+        self.swagger_types = {
+            'id_material': int,
+            'quantity': float
+        }
+
+        self.attribute_map = {
+            'id_material': 'id_material',
+            'quantity': 'quantity'
+        }
+        self._id_material = id_material
+        self._quantity = quantity
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MaterialAccessData':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The MaterialAccessData of this MaterialAccessData.  # noqa: E501
+        :rtype: MaterialAccessData
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id_material(self) -> int:
+        """Gets the id_material of this MaterialAccessData.
+
+
+        :return: The id_material of this MaterialAccessData.
+        :rtype: int
+        """
+        return self._id_material
+
+    @id_material.setter
+    def id_material(self, id_material: int):
+        """Sets the id_material of this MaterialAccessData.
+
+
+        :param id_material: The id_material of this MaterialAccessData.
+        :type id_material: int
+        """
+
+        self._id_material = id_material
+
+    @property
+    def quantity(self) -> float:
+        """Gets the quantity of this MaterialAccessData.
+
+
+        :return: The quantity of this MaterialAccessData.
+        :rtype: float
+        """
+        return self._quantity
+
+    @quantity.setter
+    def quantity(self, quantity: float):
+        """Sets the quantity of this MaterialAccessData.
+
+
+        :param quantity: The quantity of this MaterialAccessData.
+        :type quantity: float
+        """
+
+        self._quantity = quantity
